# greeter

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: dbus.rs  duration.rs  main.rs  pacman.rs  random.rs  sentences.rs
