[package]
name = "greeter"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
alpm = "5.0.0"
libc = "0.2.178"
rand = "0.9.2"
tokio = { version = "1.37", features = ["full"] }
zbus = { version = "5.12", default-features = false, features = ["tokio"] }
